# pex

./: .gitignore  Cargo.toml  Get-MovieQuality.ps1  LICENSE  MANIFEST.txt  NOTICE  README.md  build.rs  config.example.json  pex_ai_primer.yaml  release.ps1  release_linux.ps1  release_windows.ps1
docs/: index.html
epg_explorer_tool/: db_explorer-ai-primer.yaml  db_explorer.rs  library_db_explorer-ai-primer.yaml  library_db_explorer.rs
make_portable/: README.md  config.json  config_example.linux  config_example.windows  make_portable.ps1  make_portable.sh
release/: README.txt  config.json  package.ps1
scripts/: release_helpers.ps1
src/: config.rs  main.rs
src/app/: cache.rs  data.rs  detail.rs  filters.rs  gfx.rs  mod.rs  owned.rs  prefetch.rs  prefs.rs  prep.rs  scheduled.rs  types.rs  ui.rs  utils.rs
src/app/owned/: mod.rs  owned_scan_fs.rs  owned_scan_plex.rs
src/app/ui/: grid.rs  mod.rs  topbar.rs  uimod.rs
