[package]
name = "pex"
version = "0.1.0"
edition = "2021"
default-run = "pex"

[dependencies]
# GUI
eframe = "0.28.1"
egui = "0.28.1"
egui_extras = "0.28.1"

# Images & HTTP
image = "0.25"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }

# Utils
regex = "1"
md5 = "0.7"
chrono = { version = "0.4", features = ["clock"] }
rusqlite = { version = "0.31", features = ["bundled"] }
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
itertools = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "std"] }

[[bin]]
name = "db_explorer"
path = "epg_explorer_tool/db_explorer.rs"
