[package]
name = "pex"
version = "0.1.0"
edition = "2021"
default-run = "pex"

[dependencies]
# GUI
eframe = { version = "0.28.1", default-features = false, features = ["glow", "wgpu"] }
egui = "0.28.1"
egui_extras = "0.28.1"

# Images & HTTP
image = "0.25"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

# Utils
regex = "1"
walkdir = "2"
md5 = "0.7"
chrono = { version = "0.4", features = ["clock"] }
rusqlite = { version = "0.31", features = ["bundled"] }
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
itertools = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "std"] }
urlencoding = "2.1"

[[bin]]
name = "db_explorer"
path = "epg_explorer_tool/db_explorer.rs"
